<resources>
    <string name="app_name">Pokedex</string>
    <string name="pokemon_sprite_image">Pokemon sprite image</string>
    <string name="types_label">Types:</string>
    <string name="stats_label">Base Stats:</string>
    <string name="height_label">Height:</string>
    <string name="weight_label">Weight:</string>
    <string name="release_pokemon">Release</string>
    <string name="catch_pokemon">Catch</string>
    <string name="caught_pokemon_title">Your Caught Pokemon!</string>
    <string name="no_pokemon_caught">No Pokemon caught yet!</string>
    <string name="caught_pokemon_button">Caught Pokemon</string>
    <string name="pokemon_not_found">Pokemon not found</string>
    <string name="notification_text">%1$s was added to your collection!</string>
    <string name="notification_title">%1$s Caught!</string>
    <string name="error_loading_details">Could not load Pokemon details.</string>
    <string name="finding_pokemon">Finding your Pokemon!</string>
    <string name="error_loading_list">Failed to load Pokemon.</string>
    <string name="retry">Retry</string>
    <string name="error_network_connection">Please check your network connection and try again.</string>
    <string name="failed_to_load_details">Failed to load details for %1$s</string>
    <string name="failed_to_release">Failed to release %1$s</string>
    <string name="failed_to_catch">Failed to catch %1$s</string>
    <string name="permission_denied">Notification permission denied. Cannot show catch notifications.</string>
    <string name="got_released">%1$s got released!</string>
</resources>