<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/pokemonGridFragment">
    <action android:id="@+id/action_global_caughtListFragment" app:destination="@id/caughtListFragment"/>
    <fragment
        android:id="@+id/pokemonDetailFragment"
        android:name="com.shouldz.pokedex.ui.detail.PokemonDetailFragment"
        android:label="@string/finding_pokemon"
        tools:layout="@layout/fragment_pokemon_detail">
        <action
            android:id="@+id/action_pokemonDetailFragment_to_caughtListFragment"
            app:destination="@id/caughtListFragment" />
        <argument
            android:name="pokemonName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/caughtListFragment"
        android:name="com.shouldz.pokedex.ui.caught.CaughtListFragment"
        android:label="@string/caught_pokemon_title"
        tools:layout="@layout/fragment_caught_list">
        <action
            android:id="@+id/action_caughtListFragment_to_pokemonDetailFragment"
            app:destination="@id/pokemonDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/pokemonGridFragment"
        android:name="com.shouldz.pokedex.ui.list.PokemonGridFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_pokemon_grid" >
        <action
            android:id="@+id/action_pokemonGridFragment_to_caughtListFragment"
            app:destination="@id/caughtListFragment" />
        <action
            android:id="@+id/action_pokemonGridFragment_to_pokemonDetailFragment"
            app:destination="@id/pokemonDetailFragment" />
    </fragment>
</navigation>