<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.PokemonDetailFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/pokemon_error_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:gravity="center"
        android:text="@string/error_loading_details"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_guideline_horizontal"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/content_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="detail_pokemon_name_text, types_label, detail_pokemon_types_text, stats_label, detail_pokemon_stats_text, height_label, detail_pokemon_height_text, weight_label, detail_pokemon_weight_text, catch_release_button"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/detail_loading_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/image_motion_layout"
        android:layout_width="@dimen/detail_sprite"
        android:layout_height="@dimen/detail_sprite"
        app:layoutDescription="@xml/fragment_pokemon_detail_scene"
        app:layout_constraintBottom_toTopOf="@id/center_guideline_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/detail_pokemon_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/pokemon_sprite_image"
            android:padding="@dimen/padding_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

    </androidx.constraintlayout.motion.widget.MotionLayout>


    <TextView
        android:id="@+id/detail_pokemon_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_guideline_horizontal"
        tools:text="Pikachu" />

    <TextView
        android:id="@+id/types_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/types_label"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_pokemon_name_text" />

    <TextView
        android:id="@+id/detail_pokemon_types_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintBaseline_toBaselineOf="@id/types_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/types_label" />

    <TextView
        android:id="@+id/stats_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/stats_label"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/types_label" />

    <TextView
        android:id="@+id/detail_pokemon_stats_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        android:lineSpacingMultiplier="1.2"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_label"
        tools:text="HP: 35\nAttack: 55\nDefense: 40" />

    <TextView
        android:id="@+id/detail_pokemon_stats_secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        android:lineSpacingMultiplier="1.2"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_pokemon_stats_text"
        app:layout_constraintTop_toBottomOf="@id/stats_label"
        tools:text="Sp. Atk: 50\nSp. Def: 50\nSpeed: 90" />

    <TextView
        android:id="@+id/height_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/height_label"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_pokemon_stats_text" />

    <TextView
        android:id="@+id/detail_pokemon_height_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintBaseline_toBaselineOf="@id/height_label"
        app:layout_constraintStart_toEndOf="@id/height_label"
        app:layout_constraintTop_toBottomOf="@id/detail_pokemon_stats_text"/>

    <TextView
        android:id="@+id/weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/weight_label"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintStart_toEndOf="@+id/detail_pokemon_height_text"
        app:layout_constraintTop_toBottomOf="@id/detail_pokemon_stats_text" />

    <TextView
        android:id="@+id/detail_pokemon_weight_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintBaseline_toBaselineOf="@id/weight_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weight_label" />

    <Button
        android:id="@+id/catch_release_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_pokemon_weight_text"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Catch Pokemon" />

</androidx.constraintlayout.widget.ConstraintLayout>
